Imprime puntos y se corrigio error de objetos

--- a/carro/html/index.html
+++ b/carro/html/index.html
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col-12">
-            <h2>Puntos: <span></span></h2>
+            <h2>Puntos: <span id="Puntos"></span></h2>
         </div>
     </div>
 
